iHatch/styles.css
:root {
    --primary-color: #4CAF50;
    --secondary-color: #ff9800;
    --background-color: #f5f5f5;
    --text-color: #333333;
    --text-main:#1f2937;
    --text-muted: #6b7280;
    --bg-light: #34dfdf;
    --border-light: #e5e7eb;
    --texts-color:#ffffff;
    }


body{
    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    line-height: 1.6;
    color: var(--text-main);
}

h1,h2,h3,h4,h5{
    font-weight:600;
    letter-spacing: -0.02em;
}

a {
  color: var(--primary-color);
  text-decoration: none;
}

a:hover {
  text-decoration: underline;
}

nav{
    padding:5vh 2rem;
}

.hero {
  min-height: 80vh;
  background-image: url("./assets/hero.jpg");
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
  display: flex;
  align-items: center;
  position: relative;
  color: var(--texts-color);
  border: 20px; 
}

.hero::before {
  content: "";
  position: absolute;
  inset: 0;
  background: rgba(0, 0, 0, 0.5);
}

.hero .container {
  position: relative;
  z-index: 1;
}

section {
    padding: 4rem 0;
}

.why-ihatch img {
  width: 100%;
  max-width: 170px;
  height: 120px;
  object-fit: cover;
  margin-bottom: 1rem;
}

.why-ihatch h2 {
  padding: 1rem;

}

.card {
  border: 1px solid var(--border-light);
  border-radius: 8px;
  transition: box-shadow 0.2s ease;
}

.card:hover {
  box-shadow: 0 10px 25px rgba(0,0,0,0.06);
}


.form {
    border-radius:6px;
    padding: 0.6rem;
}

.btn{
    background-color: var(--primary-color);
    border: none;
    padding: 0.4rem 1.0rem;
}

.btn:hover {
    background-color: var(--secondary-color);
    border: none;
}

.btn-primary {
    background-color: var(--primary-color);
    border: none;
    padding: 0.6rem 1.2rem;
}

.btn-primary:hover {
    background-color: var(--secondary-color);
    border: none;
}

.btn-outline-primary {
    border: var(--primary-color);
    color: var(--primary-color);
}

.footer {
    box-shadow: 0 10px 25px rgba(0, 0, 0, 0.432);
    padding:2.5rem;
}

/*experts*/
section .container{
    padding:1.0rem 0;
}

div p{
  text-align: justify;
}

/* book experts
div .card-text p{
  text-align: justify;
} */

@media (max-width: 768px) {
  .hero {
    min-height: 60vh;
    text-align: center;
  }
  hero p{
    border: 20px;
  }

  .how-it-works p{
    border: 25px;
  }
  .testimonials .container{
    border: 25px;
  }

  p{
    border:20px;
  }
}

